# EAFIT-Bikes

./: .gitignore  LICENSE  README.md  SETUP_SUMMARY.md  start-build.sh  start.sh  stop.sh
geolocalization/: .env.example  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
geolocalization/.github/workflows/: ci.yml
geolocalization/adr/: ADR-01-rust-axum.md  ADR-02-postgresql-postgis.md
geolocalization/docs/: health.md  locations.md
geolocalization/k8s/: configmap.yaml  deployment.yaml  postgres-deployment.yaml  postgres-service.yaml  secret.yaml  service.yaml
geolocalization/migrations/: 0001_create_bicycles_location.sql  0002_bicycle_id_uuid_to_integer.sql
geolocalization/openspec/: config.yaml
geolocalization/openspec/changes/initialize-axum-microservice/: tasks.md
geolocalization/openspec/specs/ci-pipeline/: spec.md
geolocalization/openspec/specs/database-connection/: spec.md
geolocalization/openspec/specs/health-check/: spec.md
geolocalization/openspec/specs/http-server/: spec.md
geolocalization/openspec/specs/k8s-manifests/: spec.md
geolocalization/openspec/specs/live-ingestor/: spec.md
geolocalization/openspec/specs/location-read/: spec.md
geolocalization/openspec/specs/location-write/: spec.md
geolocalization/openspec/specs/position-mover/: spec.md
geolocalization/openspec/specs/seed-factory/: spec.md
geolocalization/src/: errors.rs  lib.rs  main.rs  models.rs  rabbitmq.rs  router.rs  state.rs
geolocalization/src/routes/: health.rs  locations.rs  mod.rs  stream.rs
geolocalization/tests/: health.rs  locations.rs
(+254 files in other folders)
