[package]
name = "geolocalization"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["json"] }
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
sqlx = { version = "0.8", features = ["postgres", "uuid", "chrono", "runtime-tokio-rustls", "migrate"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tower-http = { version = "0.6", features = ["trace"] }
clap = { version = "4", features = ["derive"] }
lapin = "2"
futures-lite = "2"
rand = "0.8"

[[bin]]
name = "seed"
path = "src/bin/seed.rs"

[[bin]]
name = "mover"
path = "src/bin/mover.rs"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
